[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/terrain/stupid_cube_dual_mat.obj" type="ArrayMesh" id=1]
[ext_resource path="res://scenes/formation/terrain/Wheat.gd" type="Script" id=2]
[ext_resource path="res://assets/terrain/crops/mat_wheat_side.tres" type="Material" id=3]
[ext_resource path="res://assets/terrain/crops/mat_wheat_top.tres" type="Material" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 0.5, 0.5 )

[node name="Wheat" type="Spatial"]
script = ExtResource( 2 )

[node name="PawnDetect" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
collision_layer = 0
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="PawnDetect"]
shape = SubResource( 1 )

[node name="WheatCube" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
mesh = ExtResource( 1 )
material/0 = ExtResource( 4 )
material/1 = ExtResource( 3 )
material/2 = null
[connection signal="body_entered" from="PawnDetect" to="." method="_on_PawnDetect_body_entered"]
[connection signal="body_exited" from="PawnDetect" to="." method="_on_PawnDetect_body_exited"]
